monitoring/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus
spec:
  selector:
    app: prometheus-server
  ports:
    - name: web
      port: 9090
      targetPort: 9090
  type: LoadBalancer
